--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.12.0
+        python-version: 3.13.0
 
     - name: Install dependencies
       run: pip3 install -U online-judge-verify-helper
@@ -29,7 +29,7 @@ jobs:
     - name: Run tests
       working-directory: main
       env:
-        CPLUS_INCLUDE_PATH: ${{ github.workspace }}/ac-library
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         YUKICODER_TOKEN: ${{ secrets.YUKICODER_TOKEN }}
         GH_PAT: ${{ secrets.GH_PAT }}
-      run: oj-verify all
+      run: oj-verify all --timeout=6000
