--- a/.verify-helper/config.toml
+++ b/.verify-helper/config.toml
@@ -1,3 +1,3 @@
 [[languages.cpp.environments]]
 CXX = "g++"
-CXXFLAGS = ["-std=c++17", "-Wall", "-Wextra", "-Wshadow", "-O2", "-march=native"]
+CXXFLAGS = ["-std=c++17", "-Wall", "-Wextra", "-Wshadow", "-Winit-self", "-Wconversion", "-Wfloat-equal", "-Wlogical-op", "-O2", "-march=native"]
